--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  font_awesome_flutter: 9.0.0-nullsafety
   intl: ^0.17.0
   libedax4dart: ^0.5.0-beta.6
     # git:
