--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -44,7 +44,9 @@ jobs:
       - name: install dependencies
         run: flutter pub get
       - name: run test
-        run: flutter test --verbose --coverage --coverage-path=./coverage/lcov.info
+        run: flutter test --coverage --coverage-path=./coverage/lcov.info --exclude-tags="debugDumpApp" # exclude noisy test
+      - name: debugDump
+        run: flutter test --coverage --coverage-path=./coverage/lcov.info --tags="debugDumpApp"
       - uses: codecov/codecov-action@v1
         with:
           file: ./coverage/lcov.info
