--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -44,9 +44,9 @@ jobs:
       - name: install dependencies
         run: flutter pub get
       - name: run test
-        run: flutter test --coverage --coverage-path=./coverage/lcov.info --exclude-tags="debugDumpApp" # exclude noisy test
+        run: flutter test --coverage --coverage-path=./coverage/lcov.base.info --exclude-tags="debugDumpApp" # exclude noisy test
       - name: debugDump
-        run: flutter test --coverage --coverage-path=./coverage/lcov.info --tags="debugDumpApp"
+        run: flutter test --coverage --merge-coverage --tags="debugDumpApp"
       - uses: codecov/codecov-action@v1
         with:
-          file: ./coverage/lcov.info
+          file: ./coverage/lcov.base.info
