--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
     #   ref: xxx
   logger: ^1.0.0-nullsafety.0
   path_provider: ^2.0.1 # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
-  provider: ^5.0.0-nullsafety.5
+  provider: ^5.0.0
   shared_preferences: ^2.0.3
   window_size:
     git:
