--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,11 @@ environment: # See: https://dart.dev/tools/pub/pubspec#sdk-constraints
 
 dependencies:
   cupertino_icons: ^1.0.2
+  # See: https://github.com/google/flutter-desktop-embedding/tree/master/plugins/file_selector
+  file_selector: ^0.8.2
+  file_selector_linux: ^0.0.2
+  file_selector_macos: ^0.0.4
+  file_selector_windows: ^0.0.2
   flutter:
     sdk: flutter
   flutter_localizations:
