--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
     #   url: https://github.com/sensuikan1973/libedax4dart.git
     #   ref: xxx
   logger: ^1.0.0-nullsafety.0
+  macos_secure_bookmarks: ^0.1.2+1
   path_provider: ^2.0.1 # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
   provider: ^5.0.0
   shared_preferences: ^2.0.3
