--- a/.github/workflows/flutter_integration_test.yaml
+++ b/.github/workflows/flutter_integration_test.yaml
@@ -20,7 +20,7 @@ jobs:
           - os: ubuntu-latest
             device: linux
             setup-script: |-
-              sudo apt-get update
+              sudo apt-get update -y
               sudo apt-get install -y libgtk-3-dev libx11-dev pkg-config cmake ninja-build libblkid-dev liblzma-dev
               flutter config --enable-linux-desktop
           - os: windows-latest
