--- a/.github/workflows/flutter_integration_test.yaml
+++ b/.github/workflows/flutter_integration_test.yaml
@@ -23,21 +23,30 @@ jobs:
               sudo apt-get update -y
               sudo apt-get install -y libgtk-3-dev libx11-dev pkg-config cmake ninja-build libblkid-dev liblzma-dev
               flutter config --enable-linux-desktop
-          - os: windows-latest
-            device: windows
-            setup-script: flutter config --enable-windows-desktop
-          - os: macos-latest
-            device: macos
-            setup-script: |-
-              flutter config --enable-macos-desktop
-              rm -rf ${FLUTTER_HOME}/bin/cache/artifacts/engine/darwin-x64* # See: https://github.com/flutter/flutter/issues/77173#issuecomment-790936689
-              flutter precache --force
+          # - os: windows-latest
+          #   device: windows
+          #   setup-script: flutter config --enable-windows-desktop
+          # - os: macos-latest
+          #   device: macos
+          #   setup-script: |-
+          #     flutter config --enable-macos-desktop
+          #     rm -rf ${FLUTTER_HOME}/bin/cache/artifacts/engine/darwin-x64* # See: https://github.com/flutter/flutter/issues/77173#issuecomment-790936689
+          #     flutter precache --force
 
     steps:
       - uses: actions/checkout@v2
-      - uses: subosito/flutter-action@v1
+      - uses: actions/checkout@v2
         with:
-          channel: ${{ matrix.flutter_channel }}
+          path: flutter
+          repository: flutter/flutter
+          ref: dev
+          fetch-depth: 0 # Shallow clones don't work; see https://github.com/flutter/flutter/issues/18532
+      - name: Add Flutter tags
+        # Add tags, which are also necessary for version checks to work.
+        run: git fetch origin +refs/tags/*:refs/tags/*
+        working-directory: ${{ github.workspace }}/flutter
+      - run: echo "$GITHUB_WORKSPACE/flutter/bin" >> $GITHUB_PATH
+
       - name: setup
         run: ${{ matrix.setup-script }}
       - name: install dependencies
