--- a/.github/workflows/flutter_integration_test.yaml
+++ b/.github/workflows/flutter_integration_test.yaml
@@ -45,4 +45,6 @@ jobs:
       - name: doctor
         run: flutter doctor -v
       - name: drive
-        run: flutter drive --driver integration_test/driver.dart --target integration_test/app_test.dart -d ${{ matrix.device }} --verbose
+        run: |-
+          flutter clean
+          flutter drive --driver integration_test/driver.dart --target integration_test/app_test.dart -d ${{ matrix.device }} --verbose
