--- a/.github/workflows/flutter_integration_test.yaml
+++ b/.github/workflows/flutter_integration_test.yaml
@@ -47,4 +47,5 @@ jobs:
       - name: drive
         run: |-
           flutter clean
+          flutter upgrade
           flutter drive --driver integration_test/driver.dart --target integration_test/app_test.dart -d ${{ matrix.device }} --verbose
